# copperspice_basic_app

./: .gitignore  CMakeLists.txt  README.md  kitchensink.qrc
cmake/: prepare.cmake
resources/: ks_de.qm  ks_en.qm  ks_fr.qm
src/: main.cpp  mainwindow.cpp  mainwindow.h
